# my-pet-code-api

./: LICENSE  Pipfile  README.md  Taskfile.yaml  pyproject.toml
.github/: CODEOWNERS  validate.yaml
.github/workflows/: artifact.yaml  validate.yaml
app/: main.py
app/api/exceptions/: exceptions.py
app/api/models/: pet.py
app/api/routers/: pets.py  users.py
app/core/: db.py  logging.py  settings.py
app/schemas/: pet.py  user.py
app/services/: pet.py
docs/: db_diagram.txt
local/: docker-compose.yaml  pgadmin-servers-config.json
local/dotenvs/: dev.env  test.env
local/scripts/: postgres-create-databases.sh
migrations/: env.py
migrations/versions/: 0fc901c06a94_data.py  e9d15175f9ed_baseline.py
tests/: test_app.py
